feat: update title font

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,9 +1,18 @@
+@import url('https://fonts.googleapis.com/css?family=Comfortaa');
+@import url('https://fonts.googleapis.com/css2?family=Cookie');
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-@import url('https://fonts.googleapis.com/css2?family=Cookie&display=swap');
 
 
 html {
     background: linear-gradient(rgb(249, 168, 212), rgb(216, 180, 254), rgb(129, 140, 248));
+}
+
+h1 {
+    font-family: 'Cookie', sans-serif;
+}
+
+* {
+    font-family: 'Comfortaa', sans-serif;
 }
